--- a/backup_default/ansible.cfg
+++ b/backup_default/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-inventory      = ./hosts
+#inventory      = /etc/ansible/hosts
 #library        = /usr/share/my_modules/
 #remote_tmp     = $HOME/.ansible/tmp
 #forks          = 5
@@ -35,7 +35,7 @@ inventory      = ./hosts
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-host_key_checking = False
+#host_key_checking = False
 
 # change the default callback
 #stdout_callback = skippy
