--- a/app.yml
+++ b/app.yml
@@ -63,6 +63,16 @@
         - zip
       tags:
         - common
+    - name: Install common tools in Hashs
+      apt:
+        name: '{{ item.name }}'
+        state: '{{ item.state }}'
+      with_items:
+        - { name: tree, state: latest }
+        - { name: tig, state: latest }
+        - { name: zip, state: latest }
+      tags:
+        - tools
 
   handlers:
     - name: restart docker
